<resources>
    <string name="app_name">CurTIS</string>
    <string name="agreement">I Acknowledge Receipt of...</string>
    <string name="clear_pad">Clear Pad</string>
    <string name="save_signature">Save</string>
    <string name="send">Send</string>
    <string name="logout">Logout</string>
    <string name="multi_select_dialog_title">Select Option</string>
    <string name="show_multi_select_dialog">Show Multi Select Dialog</string>
    <string name="google_map_api_key">AIzaSyDNq5zbsqzIHbODQTXQzHz6-ZNCywfPfIE</string>

    <string-array name="events">
        <item>Broken Seal</item>
        <item>Seal Mismatch</item>
        <item>Other</item>
    </string-array>

    <string-array name="status">
        <item>Set Status</item>
        <item>PICKED UP</item>
        <item>IN-TRANSIT</item>
        <item>DELIVERED</item>
        <item>COMPLETED</item>
    </string-array>
    <!-- main activity -->
    <string name="exitSystem">Please press back key again, exit</string>
    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="last_update_time_label">Last location update time</string>

    <string name="start_updates">Start updates</string>
    <string name="stop_updates">Stop updates</string>

    <string name="location_settings_inadequate_warning">The location settings on the device are not
        adequate to run this sample. Fix in Settings.</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>

    <string-array name="actionStatus">
        <item>Select Status</item>
        <item>Start Day</item>
        <item>End Day</item>
    </string-array>

    <string-array name="routes">
        <item>0</item>
        <item>1</item>
        <item>2a</item>
        <item>2b</item>
        <item>3a</item>
        <item>3b</item>
        <item>4</item>
        <item>5a</item>
        <item>5b</item>
        <item>5c</item>
        <item>6</item>
        <item>7</item>
        <item>8a</item>
        <item>8b</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13a</item>
        <item>13b</item>
        <item>14</item>
        <item>777</item>
    </string-array>

    <string-array name="fuelLevel">
        <item>Select Fuel Level</item>
        <item>Full</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>

    <string name="title_activity_pick_start">PickStartActivity</string>
    <string name="delivery_action">delivery Action</string>
    <string name="pick_up_action">pick-up Action</string>
    <string name="todo">TODO</string>
    <string name="attendance_schedules">Attendance Schedules</string>
    <string name="progress">In Progress</string>
    <string name="pick_up_location">PICK UP LOCATION:</string>
    <string name="destination">Destination:</string>
    <string name="status">Status:</string>
    <string name="refnumber">refNumber:</string>
    <string name="seals">SEALS:</string>
    <string name="count">COUNT</string>
    <string name="defval">0</string>
    <string name="of">OF</string>
    <string name="_0">0</string>
    <string name="sealss">SEALS</string>
    <string name="client_name">CLIENT NAME</string>
    <string name="destination1">DESTINATION</string>
    <string name="check_out">CHECK OUT</string>
    <string name="check_in">CHECK IN</string>
    <string name="seal_number">ENTER SEAL NUMBER</string>
    <string name="confirm">CONFIRM</string>
    <string name="send_status">SEND STATUS</string>
    <string name="status_new">STATUS</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Sign In!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="vmess">DEVICE VERIFICATION SUCCESSFUL</string>
    <string name="notvmess">DEVICE NOT AUTHORISED</string>
    <string name="nointer">CHECK INTERNET CONNECTION</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
