<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.rainbeta.curtistracker.ProcessActivity">


    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/common_google_signin_btn_text_dark_disabled"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/countLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/common_google_signin_btn_text_light_default"
            android:paddingBottom="3dp"
            android:paddingEnd="3dp"
            android:paddingTop="3dp"
            android:text="@string/count"
            android:textAlignment="textEnd"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/defval"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="55sp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/of"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/seals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/_0"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="55sp" />

        <TextView
            android:id="@+id/sealLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/common_google_signin_btn_text_light_default"
            android:paddingBottom="3dp"
            android:paddingStart="3dp"
            android:paddingTop="3dp"
            android:text="@string/sealss"
            android:textAlignment="viewStart"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/fback4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:text="--------------"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:id="@+id/mConfirm"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:visibility="visible">

            <Button
                android:id="@+id/serialConfirm"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text="@string/confirm"
                android:textColor="@color/common_google_signin_btn_text_dark_default"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextSeals"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/seal_number"
                android:inputType="number" />

        </LinearLayout>

    </LinearLayout>



    <LinearLayout
        android:id="@+id/jobdetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">
        <!-- Name Label -->

        <TextView
            android:id="@+id/nameLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/curtis"
            android:gravity="bottom|left"
            android:paddingStart="5dp"
            android:text="@string/client_name"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/taxIdView" />

        <TextView
            android:id="@+id/name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingStart="5dp"
            android:paddingTop="5dp"
            android:textAllCaps="true"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="GTBANK" />

        <TextView
            android:id="@+id/destinationLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/curtis"
            android:gravity="bottom|left"
            android:paddingStart="5dp"
            android:text="@string/destination1"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/payChannel" />

        <TextView
            android:id="@+id/destination"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingStart="5dp"
            android:paddingTop="5dp"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="BANKERS WAREHOUSE" />

        <!-- Description Label -->
        <!-- Price Label -->
        <TextView
            android:id="@+id/statusLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/curtis"
            android:gravity="bottom|left"
            android:paddingStart="5dp"
            android:text="@string/status_new"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/taxIdView" />

        <TextView
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dip"
            android:paddingStart="5dp"
            android:paddingTop="5dip"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="IN - TRANSIT" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/scanView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/statusUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/common_google_signin_btn_text_light_disabled"
        android:orientation="vertical"
        android:visibility="gone">

        <Spinner
            android:id="@+id/mainStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="200dp"
            android:entries="@array/status"
            android:padding="25dp" />

        <Button
            android:id="@+id/sendStatus"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:onClick="UpdateStatus"
            android:text="@string/send_status"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>
