<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".BankActivity">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/common_google_signin_btn_text_dark_disabled"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/countLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/common_google_signin_btn_text_light_default"
            android:paddingBottom="2dp"
            android:paddingEnd="2dp"
            android:paddingTop="2dp"
            android:text="@string/count"
            android:textAlignment="textEnd"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/defval"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/of"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/seals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/_0"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/sealLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/common_google_signin_btn_text_light_default"
            android:paddingBottom="2dp"
            android:paddingStart="2dp"
            android:paddingTop="2dp"
            android:text="@string/sealss"
            android:textAlignment="viewStart"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/fback2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="--------------"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="14sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/mConfirm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:visibility="visible">

            <Button
                android:id="@+id/serialConfirm"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/confirm"
                android:textColor="@color/common_google_signin_btn_text_dark_default"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextSeals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/seal_number"
                android:inputType="number"
                android:textSize="14sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Select Bank"
            android:textStyle="bold" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            app:cardCornerRadius="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/bankSpinner"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:entries="@array/routes"
                    android:spinnerMode="dialog" />

                <Button
                    android:id="@+id/busecam"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@color/colorPrimaryDark"
                    android:text="USE CAMERA"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/scanView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    </LinearLayout>

</LinearLayout>